--- a/base-lazy-days/server/package.json
+++ b/base-lazy-days/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.3",
+    "@typescript-eslint/parser": "^5.33.1",
     "body-parser": "^1.18.2",
     "core-js": "^3.8.1",
     "cors": "^2.8.4",
